--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,31 @@ name = "pypi"
 coverage = "*"
 
 [dev-packages]
+python-dotenv = "*"
 coverage = "*"
 pdoc3 = "*"
+navio-builder-win = "*"
+pytest = ">=6.0.1"
+pytest-cov = ">=2.10.1"
+pytest-timeout = "*"
+pytest-xdist = ">=2.1.0"
+pip-check = "==2.6"
+#pynt = "==0.8.2"
+#pynt-contrib = "==0.2.0"
+checksumdir = "==1.1.7"
+gitchangelog = "==3.0.4"
+liccheck = "==0.4.3"
+psutil = "==5.6.7"
+pebble = "==4.5.0"
+gitpython = "*"
+sshtunnel = "*"
+ifaddr = "*"
+vendorize = "*"
+tox = "*"
+setuptools-scm = "*"
+jake = "*"
+libyear = "*"
+dodgy = "*"
 
 [requires]
 python_version = "3.9"
