--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,6 @@
 export PYTHONIOENCODING=utf-8
 export LC_ALL=en_US.UTF-8
 export LANG=en_US.UTF-8
+TWINE_USERNAME=the username to use for authentication to the repository.
+TWINE_PASSWORD=the password to use for authentication to the repository.
+TWINE_REPOSITORY=
