--- a/.config/requirements_for_safety.txt
+++ b/.config/requirements_for_safety.txt
@@ -2,6 +2,7 @@ atomicwrites==1.4.0
 attrs==21.2.0
 backports.entry-points-selectable==1.1.1
 bcrypt==3.2.0
+CacheControl==0.12.10
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.7
@@ -12,23 +13,28 @@ colorclass==2.2.0
 configparser==5.1.0
 coverage==6.1.2
 cryptography==35.0.0
-cyclonedx-python-lib==0.10.2
+cyclonedx-python-lib==0.11.1
 distlib==0.3.3
+docopt==0.6.2
 dodgy==0.2.1
 execnet==1.9.0
-filelock==3.3.2
+filelock==3.4.0
 gitchangelog==3.0.4
 gitdb==4.0.9
 GitPython==3.1.24
+html5lib==1.1
 idna==3.3
 ifaddr==0.1.7
+importlib-metadata==4.8.2
 iniconfig==1.1.1
 jake==1.1.3
 libyear==0.2.1
 liccheck==0.4.3
+lockfile==0.12.2
 Mako==1.1.5
-Markdown==3.3.4
+Markdown==3.3.5
 MarkupSafe==2.0.1
+msgpack==1.0.2
 navio-builder-win==0.1.58
 ossindex-lib==0.2.1
 packageurl-python==0.9.6
@@ -36,11 +42,14 @@ packaging==21.2
 paramiko==2.8.0
 pdoc3==0.10.0
 Pebble==4.5.0
+pip-api==0.0.23
+pip-audit==0.0.6
 pip-check==2.6
 platformdirs==2.4.0
 pluggy==1.0.0
 polling2==0.5.0
 prettytable==2.4.0
+progress==1.6
 psutil==5.6.7
 py==1.11.0
 pycparser==2.21
@@ -57,6 +66,7 @@ python-dotenv==0.19.2
 PyYAML==5.4.1
 requests==2.26.0
 requirements-parser==0.2.0
+resolvelib==0.8.1
 semantic-version==2.8.5
 setuptools-scm==6.3.2
 six==1.16.0
@@ -68,9 +78,13 @@ tinydb==4.5.2
 toml==0.10.2
 tomli==1.2.2
 tox==3.24.4
+types-setuptools==57.4.2
+types-toml==0.10.1
 typing_extensions==4.0.0
 urllib3==1.26.7
 vendorize==0.2.2
 virtualenv==20.10.0
 wcwidth==0.2.5
+webencodings==0.5.1
 yaspin==2.1.0
+zipp==3.6.0
