--- a/.config/requirements_for_safety.txt
+++ b/.config/requirements_for_safety.txt
@@ -5,6 +5,7 @@ bcrypt==3.2.0
 CacheControl==0.12.10
 certifi==2021.10.8
 cffi==1.15.0
+chardet==4.0.0
 charset-normalizer==2.0.7
 checksumdir==1.1.7
 click==8.0.3
@@ -31,6 +32,7 @@ jake==1.1.3
 libyear==0.2.1
 liccheck==0.4.3
 lockfile==0.12.2
+lxml==4.6.4
 Mako==1.1.5
 Markdown==3.3.5
 MarkupSafe==2.0.1
