--- a/Pipfile
+++ b/Pipfile
@@ -35,6 +35,15 @@ jake = "*"
 libyear = "*"
 dodgy = "*"
 html5lib = "*"
+lazydocs = "*"
+pydocstyle = "*"
+mkdocs-material = "*"
+mkdocstrings = "*"
+mkdocs = "*"
+pycco = "*"
+portray = "*"
+pydoctor = "*"
+handsdown = "*"
 
 [requires]
 python_version = "3.9"
