--- a/.config/requirements-dev.txt
+++ b/.config/requirements-dev.txt
@@ -15,22 +15,33 @@ coverage
 dodgy
 gitchangelog==3.0.4
 gitpython
+handsdown
 html5lib
 ifaddr
 jake
+lazydocs
 libyear
 liccheck==0.4.3
+mkdocs
+mkdocs-material
+mkdocstrings
 navio-builder-win
 pdoc3
 pebble==4.5.0
 pip-check==2.6
+portray
 psutil==5.6.7
+pycco
+pydocstyle
+pydoctor
 pytest-cov>=2.10.1
 pytest-timeout
 pytest-xdist>=2.1.0
 pytest>=6.0.1
 python-dotenv
 setuptools-scm
+sphinx
+sphinx-rtd-theme
 sshtunnel
 tox
 vendorize
