--- a/.config/requirements_for_safety.txt
+++ b/.config/requirements_for_safety.txt
@@ -1,5 +1,10 @@
+alabaster==0.7.12
+appdirs==1.4.4
+astor==0.8.1
 atomicwrites==1.4.0
 attrs==21.2.0
+Automat==20.2.0
+Babel==2.9.1
 backports.entry-points-selectable==1.1.1
 bcrypt==3.2.0
 CacheControl==0.12.10
@@ -12,30 +17,49 @@ click==8.0.3
 colorama==0.4.4
 colorclass==2.2.0
 configparser==5.1.0
+constantly==15.1.0
 coverage==6.1.2
 cryptography==35.0.0
 cyclonedx-python-lib==0.11.1
 distlib==0.3.3
 docopt==0.6.2
+docstring-parser==0.7.3
+docutils==0.17.1
 dodgy==0.2.1
 execnet==1.9.0
+falcon==2.0.0
 filelock==3.4.0
+ghp-import==2.0.2
 gitchangelog==3.0.4
 gitdb==4.0.9
 GitPython==3.1.24
+handsdown==0.4.2
 html5lib==1.1
+hug==2.6.1
+hyperlink==21.0.0
 idna==3.3
 ifaddr==0.1.7
+imagesize==1.3.0
 importlib-metadata==4.8.2
+incremental==21.3.0
 iniconfig==1.1.1
 jake==1.1.3
+Jinja2==3.0.3
+lazydocs==0.4.8
 libyear==0.2.1
 liccheck==0.4.3
+livereload==2.6.3
 lockfile==0.12.2
 lxml==4.6.4
 Mako==1.1.5
 Markdown==3.3.5
 MarkupSafe==2.0.1
+mergedeep==1.3.4
+mkdocs==1.2.2
+mkdocs-autorefs==0.3.0
+mkdocs-material==7.3.0
+mkdocs-material-extensions==1.0.3
+mkdocstrings==0.16.2
 msgpack==1.0.2
 navio-builder-win==0.1.58
 ossindex-lib==0.2.1
@@ -43,6 +67,7 @@ packageurl-python==0.9.6
 packaging==21.2
 paramiko==2.8.0
 pdoc3==0.10.0
+pdocs==1.1.1
 Pebble==4.5.0
 pip-api==0.0.23
 pip-audit==0.0.6
@@ -50,14 +75,21 @@ pip-check==2.6
 platformdirs==2.4.0
 pluggy==1.0.0
 polling2==0.5.0
+portray==1.7.0
 prettytable==2.4.0
 progress==1.6
 psutil==5.6.7
 py==1.11.0
+Pycco==0.6.0
 pycparser==2.21
+pydocstyle==6.1.1
+pydoctor==21.9.2
 pyfiglet==0.8.post1
+Pygments==2.10.0
+pymdown-extensions==7.1
 PyNaCl==1.4.0
 pyparsing==2.4.7
+pystache==0.5.4
 pytest==6.2.5
 pytest-cov==3.0.0
 pytest-forked==1.3.0
@@ -65,28 +97,48 @@ pytest-timeout==2.0.1
 pytest-xdist==2.4.0
 python-dateutil==2.8.2
 python-dotenv==0.19.2
+pytkdocs==0.12.0
+pytz==2021.3
 PyYAML==5.4.1
+pyyaml_env_tag==0.1
 requests==2.26.0
 requirements-parser==0.2.0
 resolvelib==0.8.1
 semantic-version==2.8.5
 setuptools-scm==6.3.2
 six==1.16.0
+smartypants==2.0.1
 smmap==5.0.0
+snowballstemmer==2.2.0
+Sphinx==4.3.0
+sphinx-rtd-theme==1.0.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 sshtunnel==0.4.0
 termcolor==1.1.0
 terminaltables==3.1.0
 tinydb==4.5.2
 toml==0.10.2
 tomli==1.2.2
+tornado==6.1
 tox==3.24.4
+Twisted==21.7.0
+twisted-iocpsupport==1.0.2
+typed-ast==1.5.0
+typer==0.4.0
 types-setuptools==57.4.2
 types-toml==0.10.1
 typing_extensions==4.0.0
 urllib3==1.26.7
 vendorize==0.2.2
 virtualenv==20.10.0
+watchdog==2.1.6
 wcwidth==0.2.5
 webencodings==0.5.1
-yaspin==2.1.0
+yaspin==0.15.0
 zipp==3.6.0
+zope.interface==5.4.0
