--- a/.config/requirements_for_safety.txt
+++ b/.config/requirements_for_safety.txt
@@ -7,10 +7,11 @@ Automat==20.2.0
 Babel==2.9.1
 backports.entry-points-selectable==1.1.1
 bcrypt==3.2.0
+black==21.11b1
+blacken-docs==1.12.0
 CacheControl==0.12.10
 certifi==2021.10.8
 cffi==1.15.0
-chardet==4.0.0
 charset-normalizer==2.0.7
 checksumdir==1.1.7
 click==8.0.3
@@ -20,7 +21,8 @@ configparser==5.1.0
 constantly==15.1.0
 coverage==6.1.2
 cryptography==35.0.0
-cyclonedx-python-lib==0.11.1
+cyclonedx-python-lib==0.10.2
+darglint==1.8.1
 distlib==0.3.3
 docopt==0.6.2
 docstring-parser==0.7.3
@@ -43,6 +45,7 @@ imagesize==1.3.0
 importlib-metadata==4.8.2
 incremental==21.3.0
 iniconfig==1.1.1
+interrogate==1.5.0
 jake==1.1.3
 Jinja2==3.0.3
 lazydocs==0.4.8
@@ -50,34 +53,33 @@ libyear==0.2.1
 liccheck==0.4.3
 livereload==2.6.3
 lockfile==0.12.2
-lxml==4.6.4
-Mako==1.1.5
-Markdown==3.3.5
+Mako==1.1.6
+Markdown==3.3.6
 MarkupSafe==2.0.1
 mergedeep==1.3.4
-mkdocs==1.2.2
+mkdocs==1.2.3
 mkdocs-autorefs==0.3.0
-mkdocs-material==7.3.0
+mkdocs-material==7.3.6
 mkdocs-material-extensions==1.0.3
 mkdocstrings==0.16.2
-msgpack==1.0.2
+msgpack==1.0.3
+mypy==0.910
+mypy-extensions==0.4.3
 navio-builder-win==0.1.58
 ossindex-lib==0.2.1
 packageurl-python==0.9.6
-packaging==21.2
+packaging==21.3
 paramiko==2.8.0
+pathspec==0.9.0
 pdoc3==0.10.0
 pdocs==1.1.1
 Pebble==4.5.0
-pip-api==0.0.23
-pip-audit==0.0.6
 pip-check==2.6
 platformdirs==2.4.0
 pluggy==1.0.0
 polling2==0.5.0
 portray==1.7.0
 prettytable==2.4.0
-progress==1.6
 psutil==5.6.7
 py==1.11.0
 Pycco==0.6.0
@@ -88,8 +90,8 @@ pyfiglet==0.8.post1
 Pygments==2.10.0
 pymdown-extensions==7.1
 PyNaCl==1.4.0
-pyparsing==2.4.7
-pystache==0.5.4
+pyparsing==3.0.6
+pystache==0.5.0
 pytest==6.2.5
 pytest-cov==3.0.0
 pytest-forked==1.3.0
@@ -101,9 +103,9 @@ pytkdocs==0.12.0
 pytz==2021.3
 PyYAML==5.4.1
 pyyaml_env_tag==0.1
+regex==2021.11.10
 requests==2.26.0
 requirements-parser==0.2.0
-resolvelib==0.8.1
 semantic-version==2.8.5
 setuptools-scm==6.3.2
 six==1.16.0
@@ -119,6 +121,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 sshtunnel==0.4.0
+tabulate==0.8.9
 termcolor==1.1.0
 terminaltables==3.1.0
 tinydb==4.5.2
@@ -130,8 +133,8 @@ Twisted==21.7.0
 twisted-iocpsupport==1.0.2
 typed-ast==1.5.0
 typer==0.4.0
-types-setuptools==57.4.2
-types-toml==0.10.1
+types-docutils==0.17.1
+types-Markdown==3.3.9
 typing_extensions==4.0.0
 urllib3==1.26.7
 vendorize==0.2.2
