--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pydoc_fork"
-version = "3.1.4"
+version = "3.1.8"
 description = "Fork of cpython's pydoc module to do just html document generation"
 authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]
 keywords = ["pydoc", "html documentation"]
@@ -114,7 +114,7 @@ multi_line_output = 3
 use_parentheses = true
 
 [tool.pydoc_fork]
-SKIP_TYPING = true
 PREFER_INTERNET_DOCUMENTATION = false
 DOCUMENT_INTERNALS = false
 SKIP_MODULES = ["typing"]
+ONLY_NAMED_AND_SUBS = false
