starting on build script for docs

--- a/Pipfile
+++ b/Pipfile
@@ -54,6 +54,7 @@ darglint = "*"
 types-docutils = "*"
 types-markdown = "*"
 blacken-docs = "*"
+docstring-parser = "*"
 
 [requires]
 python_version = "3.9"
