--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pydoc_fork"
-version = "3.1.8"
+version = "3.1.9"
 description = "Fork of cpython's pydoc module to do just html document generation"
 authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]
 keywords = ["pydoc", "html documentation"]
@@ -42,6 +42,10 @@ python = ">=3.6, <4.0"
 docopt = "*"
 jinja2 = "*"
 typing_extensions = "*"
+tomli = "*"
+markdown = "*"
+docutils = "*"
+
 
 [tool.poetry.dev-dependencies]
 pytest = "==6.0.1"
