--- a/.config/requirements.txt
+++ b/.config/requirements.txt
@@ -11,7 +11,8 @@
 ################################################################################
 
 docopt
-interrogate
+docutils
 jinja2
+markdown
 tomli
 typing-extensions
