--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,12 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 include = [
     "pydoc_fork/**/*.py",
@@ -48,9 +47,10 @@ python = ">=3.8, <4"
 docopt-ng = ">=0.9.0, <1"
 
 # ui
-jinja2 = ">=3.1.3, <4"
+jinja2 = ">=3.1.4, <4"
 markdown = ">=3.5.2, <4"
-docutils = ">=0.20.1, <1"
+# docutils dropped 3.8 for later versions
+docutils = "==0.20.1"
 
 # loads pyproject.toml
 tomli = ">=2.0.1, <3"
