--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
+[project]
+dependencies = ["python >=3.8, <4", "docopt-ng >=0.9.0, <1", "jinja2 >=3.1.4, <4", "markdown >=3.5.2, <4", "docutils ==0.20.1", "tomli >=2.0.1, <3", "typing_extensions"]
+
+[project.optional-dependencies]
+dev = ["coverage", "pytest >=6.0.1", "pytest-cov >=2.10.1", "pytest-xdist >=2.1.0", "tox", "pylint >=3.0.2", "mypy", "types-docutils", "types-Markdown", "python-dotenv ==0.11.0", "html5lib", "proselint >=0.13.0", "interrogate >=1.5.0", "pydoctest >=0.1.22", "pdoc3 >=0.10.0", "mdformat >=0.7.17", "linkcheckmd >=1.4.0", "codespell >=2.2.6", "pyenchant >=3.2.2", "metametameta", "tomlkit"]
+
 [tool.poetry]
 name = "pydoc_fork"
 version = "3.3.0"
@@ -30,7 +36,7 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/matthewdeanmartin/pydoc_fork"
 homepage = "https://github.com/matthewdeanmartin/pydoc_fork"
-documentation ="https://github.com/matthewdeanmartin/pydoc_fork"
+documentation = "https://github.com/matthewdeanmartin/pydoc_fork"
 
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/matthewdeanmartin/pydoc_fork/issues"
@@ -91,7 +97,8 @@ codespell = ">=2.2.6"
 pyenchant = ">=3.2.2"
 metametameta = "*"
 
-
+# scripts
+tomlkit = "*"
 
 
 [tool.black]
@@ -151,3 +158,8 @@ ONLY_NAMED_AND_SUBS = false
 
 [tool.portray]
 output_dir = "doc/docs_portray"
+
+[tool.bonded]
+search_path = 'pydoc_fork/'
+pyproject = 'pyproject.toml'
+exclude = ['__pycache__/']
